# rtp-server-app

./: .clangd  .gitignore  app.json  metro.config.js  package-lock.json  package.json
app/: _layout.tsx  camera.tsx  index.tsx  modal.tsx
nitro/react-native-rtp-server/: RtpServer.podspec  nitro.json  package-lock.json  package.json
nitro/react-native-rtp-server/android/: CMakeLists.txt  build.gradle
nitro/react-native-rtp-server/android/src/main/cpp/: cpp-adapter.cpp
nitro/react-native-rtp-server/android/src/main/java/com/margelo/nitro/rtpserver/: RtpServerPackage.kt
nitro/react-native-rtp-server/cpp/: HybridRtpServer.cpp  HybridRtpServer.hpp
nitro/react-native-rtp-server/ios/: RtpServer.swift
nitro/react-native-rtp-server/src/: RtpServer.nitro.ts  index.tsx
